--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -10,7 +10,7 @@
 
 /* Header-Nav */
 .header {
-    background-image: url("/images/cover.png");
+    background-image: url("images/cover.png");
     background-size: cover;
     height: 100vh;
     width: 100%;
@@ -103,7 +103,7 @@
     .info-image{
         width: 50%;
         height: 100vh;
-        background-image: url("/images/info_image.png");
+        background-image: url("images/info_image.png");
         background-size: cover;        
     }
 }
