--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 
 /* Header-Nav */
 .header {
-  background-image: url("images/cover.png");
+  background-image: url("../images/cover.png");
   background-size: cover;
   height: 100vh;
   width: 100%;
@@ -101,6 +101,6 @@
 .container-info .info-image {
   width: 50%;
   height: 100vh;
-  background-image: url("images/info_image.png");
+  background-image: url("../images/info_image.png");
   background-size: cover;
 }/*# sourceMappingURL=styles.css.map */
