--- a/css/styles.css
+++ b/css/styles.css
@@ -56,9 +56,6 @@
   color: white;
   letter-spacing: 0.025em;
 }
-.header .cover .fa-light {
-  color: black;
-}
 
 /* Fin de Header-Nav */
 /* Info*/
@@ -103,4 +100,112 @@
   height: 100vh;
   background-image: url("../images/info_image.png");
   background-size: cover;
-}/*# sourceMappingURL=styles.css.map */
+}
+
+/* Fin de Info*/
+/* Proyecto */
+.container-proyecto {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100vh;
+  background-image: url("../images/proyecto.jpg");
+  background-size: 100% 100vh;
+  background-repeat: no-repeat;
+}
+
+/*Fin de Proyecto */
+/* Galeria */
+.container-galery {
+  background-color: #D7EDAC;
+}
+.container-galery .pendiente {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  font-family: "Economica", sans-serif;
+  font-weight: 700;
+  font-size: 28px;
+  color: #201F1F;
+}
+
+/* Fin de Galeria */
+/* Etapa */
+.container-phase {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+.container-phase .phase-title {
+  font-family: "Economica", sans-serif;
+  font-weight: 700;
+  font-size: 28px;
+  color: #201F1F;
+  margin-bottom: 100px;
+}
+.container-phase .container-phase-status {
+  display: flex;
+  flex-direction: row;
+}
+.container-phase .container-phase-status .phase-status {
+  display: flex;
+  flex-direction: column;
+  padding: 0 50px;
+  font-family: "Lexend", sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+  color: #201F1F;
+  text-align: center;
+  gap: 25px;
+}
+
+/* Fin de Etapa */
+/* Equipo */
+.team-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+.team-section .team-title {
+  font-family: "Economica", sans-serif;
+  font-weight: 700;
+  font-size: 28px;
+  color: #201F1F;
+  margin-bottom: 50px;
+}
+.team-section .container-team {
+  display: flex;
+  flex-direction: row;
+}
+.team-section .container-team .team {
+  display: flex;
+  flex-direction: column;
+  padding: 0 15px;
+}
+.team-section .container-team .team .team-name {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: #201F1F;
+  margin-top: 35px;
+  padding: 10px 25px;
+}
+.team-section .container-team .team .team-pos {
+  font-family: "Economica", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  color: #201F1F;
+  padding: 10px 25px;
+}
+
+/* Fin de Equipo *//*# sourceMappingURL=styles.css.map */
