--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -57,9 +57,6 @@
 
             }
         }
-        .fa-light{
-            color: black;
-        }
     }
 }
 
@@ -107,3 +104,104 @@
         background-size: cover;        
     }
 }
+/* Fin de Info*/
+
+/* Proyecto */
+.container-proyecto{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100vh;
+    background-image: url("../images/proyecto.jpg");
+    background-size: 100% 100vh;
+    background-repeat: no-repeat;
+}
+/*Fin de Proyecto */
+
+/* Galeria */
+.container-galery {
+    background-color: $secundary-color;
+    .pendiente{
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+        @include texto ($font-family-titles, 700, 28px, $text-color);
+    }
+}
+/* Fin de Galeria */
+
+/* Etapa */
+.container-phase{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    .phase-title{
+        @include texto ($font-family-titles, 700, 28px, $text-color);
+        margin-bottom: 100px;
+
+    }
+
+    .container-phase-status{
+        display: flex;
+        flex-direction: row;
+
+        .phase-status{
+            display: flex;
+            flex-direction: column;
+            padding: 0 50px;
+            @include texto ($font-family-text, 300, 18px, $text-color);
+            text-align: center;
+            gap: 25px;
+        }
+    }
+}
+
+/* Fin de Etapa */
+
+/* Equipo */
+.team-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    .team-title{
+        @include texto ($font-family-titles, 700, 28px, $text-color);
+        margin-bottom: 50px;
+
+    }
+
+    .container-team{
+        display: flex;
+        flex-direction: row;
+
+        .team{
+            display: flex;
+            flex-direction: column;        
+            padding: 0 15px;
+
+            .team-name {
+                @include texto ($font-family-text2, 400, 16px, $text-color);
+                margin-top: 35px;
+                padding: 10px 25px;
+            }
+
+            .team-pos {
+                @include texto ($font-family-titles, 700, 16px, $text-color);
+                padding: 10px 25px;
+            }
+        }
+    }
+}
+
+/* Fin de Equipo */
+
+
