--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -140,18 +140,17 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
     height: 100vh;
     .phase-title{
         @include texto ($font-family-titles, 700, 28px, $text-color);
         margin-bottom: 100px;
-
     }
-
     .container-phase-status{
+        width: 90%;
         display: flex;
         flex-direction: row;
-
+        justify-content: center;
+        align-items: center;
         .phase-status{
             display: flex;
             flex-direction: column;
@@ -204,4 +203,86 @@
 
 /* Fin de Equipo */
 
+/* Galeria */
+.container-articles {
+    background-color: $secundary-color;
+    .pendiente{
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+        @include texto ($font-family-titles, 700, 28px, $text-color);
+    }
+}
+/* Fin de Galeria */
+
+/* Formulario */
+.container-form{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: $text-color;
+
+    .form{
+        width: 612px;
+        .form-title{
+            @include texto ($font-family-titles, 700, 28px, white);
+            margin-bottom: 56px;
+        }
+        text-align: center;
+        .input, .input-msg {
+            margin-bottom: 24px;
+            width: 612px;
+            height: 64px;
+            border: none;
+            border-radius: 5px;
+            padding: 15px;
+            font-size: 15px;
+        }
+        .input-msg{
+            height: 166px;
+            resize: none;
+
+        }
+        .btn-send {
+            margin-top: 24px;
+            width: 196px;
+            height: 64px;
+            background: #8ABA5A;
+            border: none;
+            border-radius: 10px;
+            @include texto ($font-family-text, 500, 18px, white);
+
+        }
+    }
+}
+/* Fin de Formulario */
+
+/* Footer */
+.footer {
+    width: 100%;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: $text-color;
+    .footer-img{
+        margin-top: 150px;
+        margin-bottom: 24px;
+        }
+    .contact-info {
+        width: 250px;
+        background-color: $primary-color;
+        text-align: center;
+        @include texto ($font-family-text, 400, 18px, white);
+        margin: 12px 0;
+    }
+}
 
