--- a/sass/styles.css
+++ b/sass/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -83,6 +84,7 @@
   font-size: 28px;
   color: #201F1F;
   margin-bottom: 28px;
+  margin-top: 50px;
 }
 .container-info .info .info-text .info-text-p {
   font-family: "Lexend", sans-serif;
@@ -105,13 +107,19 @@
 /* Fin de Info*/
 /* Proyecto */
 .container-proyecto {
-  display: flex;
-  flex-direction: row;
   width: 100%;
   height: 100vh;
-  background-image: url("../images/proyecto.jpg");
-  background-size: 100% 100vh;
+  background-image: url("../images/Planimetría final.png");
+  background-size: 100%;
   background-repeat: no-repeat;
+  margin-top: 20px;
+}
+
+#planimetriaFinal {
+  width: 90% !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  height: 100vh;
 }
 
 /*Fin de Proyecto */
@@ -120,35 +128,51 @@
   padding: 10px;
 }
 
+.container-galery {
+  width: 100%;
+  overflow: hidden;
+}
+
 .gallery {
   display: flex;
-  padding: 2px;
   transition: 0.3s;
-  justify-content: space-evenly;
   flex-wrap: nowrap;
+  overflow: hidden;
+  align-items: stretch;
+  justify-content: center;
 }
 .gallery .gallery__image {
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
+  width: 100%;
 }
 .gallery:hover .gallery__image {
   filter: grayscale(1);
 }
-.gallery__column {
+.gallery__column1 {
   display: flex;
   flex-direction: column;
-  width: 25%;
+  width: auto;
+  max-width: 30%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  overflow: hidden;
+}
+.gallery__column2 {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  max-width: 60%;
+  height: 90vh;
 }
 .gallery__row {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  width: 75%;
+  width: auto;
+  height: 50vh;
 }
 .gallery__link {
-  margin: 2px;
-  overflow: hidden;
+  margin-top: 0;
 }
 .gallery__link:hover .gallery__image {
   filter: grayscale(0);
@@ -162,6 +186,9 @@
 .gallery__image {
   display: block;
   width: 100%;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
   transition: 0.3s;
 }
 .gallery__image:hover {
@@ -287,6 +314,7 @@
   justify-content: center;
   align-items: center;
   background-color: #201F1F;
+  padding-top: 50px;
 }
 .container-form .form {
   width: 612px;
@@ -325,6 +353,10 @@
   color: white;
 }
 
+#Contacto {
+  padding-top: 50px;
+}
+
 /* Fin de Formulario */
 /* Footer */
 .footer {
@@ -349,4 +381,27 @@
   font-size: 18px;
   color: white;
   margin: 12px 0;
+}
+
+.float {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 40px;
+  right: 40px;
+  background-color: #25d366;
+  color: #FFF;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 30px;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 100;
+  transition: all 0.5s ease;
+}
+.float:hover {
+  background-color: #0c9;
+}
+
+.my-float {
+  margin-top: 16px;
 }/*# sourceMappingURL=styles.css.map */
