--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -85,6 +85,7 @@
             .info-text-title {
                 @include texto ($font-family-titles, 700, 28px, $text-color);
                 margin-bottom: 28px;
+                margin-top: 50px;
             }
     
             .info-text-p{
@@ -108,29 +109,122 @@
 
 /* Proyecto */
 .container-proyecto{
-    display: flex;
-    flex-direction: row;
     width: 100%;
     height: 100vh;
-    background-image: url("../images/proyecto.jpg");
-    background-size: 100% 100vh;
+    background-image: url("../images/Planimetría\ final.png");
+    background-size: 100%;
     background-repeat: no-repeat;
+    margin-top: 20px;
+
+
+
+}
+
+#planimetriaFinal{
+    width: 90% !important;
+    margin: 0px !important;
+    padding: 0px !important;
+    height: 100vh;
 }
 /*Fin de Proyecto */
 
 /* Galeria */
 .container-galery {
-    background-color: $secundary-color;
-    .pendiente{
+    padding: 10px;
+    
+    
+    
+    
+}
+.container-galery{
+    width: 100%;
+    overflow: hidden;
+}
+.gallery {
+	display: flex;
+	transition: .3s;
+    flex-wrap: nowrap;
+    overflow: hidden;
+    align-items: stretch;
+    justify-content: center;
+
+    
+
+    .gallery__image {
         width: 100%;
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: auto;
-        @include texto ($font-family-titles, 700, 28px, $text-color);
     }
+	
+	&:hover &__image {
+		filter: grayscale(1);
+	}
+	
+	&__column1 {
+		display: flex;
+		flex-direction: column;
+		width: auto;
+        max-width: 30%;
+        height: fit-content;
+        overflow: hidden;
+	}
+
+    &__column2 {
+		display: flex;
+		flex-direction: column;
+		width: auto;
+        max-width: 60%;
+        height: 90vh;
+	}
+
+    &__row {
+		display: flex;
+		flex-direction: row;
+        flex-wrap: nowrap;
+		width: auto;
+        height: 50vh;
+	}
+	
+	&__link {
+        margin-top: 0;
+		
+		&:hover {
+			.gallery__image {
+				filter: grayscale(0);
+			}
+			
+			.gallery__caption {
+				opacity: 1;
+			}
+		}
+	}
+	
+	&__thumb {
+		position: relative;
+	}
+	
+	&__image {
+		display: block;
+		width: 100%;
+        height: max-content;
+		transition: .3s;
+		
+		&:hover {
+			transform: scale(1.1);
+		}
+	}
+	
+	&__caption {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		padding: 25px 15px 15px;
+		width: 100%;
+		font-family: 'Raleway', sans-serif;
+		font-size: 16px;
+		color: white;
+		opacity: 0;
+		background: linear-gradient(0deg, rgba(0, 0, 0, .5) 0%, rgba(255, 255 ,255 , 0) 100%);
+		transition: .3s;
+	}
 }
 /* Fin de Galeria */
 
@@ -228,6 +322,7 @@
     justify-content: center;
     align-items: center;
     background-color: $text-color;
+    padding-top: 50px;
 
     .form{
         width: 612px;
@@ -262,6 +357,10 @@
         }
     }
 }
+
+#Contacto{
+    padding-top: 50px;
+}
 /* Fin de Formulario */
 
 /* Footer */
@@ -286,3 +385,28 @@
     }
 }
 
+
+
+
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:#25d366;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  font-size:30px;
+	box-shadow: 2px 2px 3px #999;
+  z-index:100;
+  transition: all 0.5s ease;
+  &:hover{
+    background-color: #0c9;
+  }
+}
+
+.my-float{
+	margin-top:16px;
+}
