--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -15,6 +15,7 @@
     height: 100vh;
     width: 100%;
 
+
     .nav {
         display: flex;
         flex-direction: row;
@@ -67,7 +68,6 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-
     .info{
         display: flex;
         flex-direction: column;
@@ -163,7 +163,7 @@
 		flex-direction: column;
 		width: auto;
         max-width: 30%;
-        height: fit-content;
+        height: 90vh;
         overflow: hidden;
 	}
 
@@ -199,13 +199,16 @@
 	
 	&__thumb {
 		position: relative;
+        height: 100%;
+        width: max-content;
 	}
 	
 	&__image {
 		display: block;
-		width: 100%;
-        height: max-content;
+		height: 100%;
+        width: max-content;
 		transition: .3s;
+        overflow: hidden;
 		
 		&:hover {
 			transform: scale(1.1);
@@ -226,6 +229,8 @@
 		transition: .3s;
 	}
 }
+
+
 /* Fin de Galeria */
 
 /* Etapa */
@@ -377,7 +382,7 @@
         margin-bottom: 24px;
         }
     .contact-info {
-        width: 250px;
+        width: 300px;
         background-color: $primary-color;
         text-align: center;
         @include texto ($font-family-text, 400, 18px, white);
@@ -407,6 +412,202 @@
   }
 }
 
+.float2Left{
+	position:fixed;
+	width:40px;
+	height:40px;
+	bottom:40px;
+	left:40px;
+
+	text-align:center;
+
+  z-index:100;
+  transition: all 0.5s ease;
+  &:hover{
+    scale: 1.2;
+  }
+}
+
 .my-float{
 	margin-top:16px;
 }
+
+
+
+
+
+///galeria
+/// 
+.grid-gallery {
+    display: grid;
+    grid-auto-rows: 200px;
+    gap: 1rem;
+    grid-auto-flow: row dense;
+  }
+  
+  @media all and (min-width: 320px) {
+    .grid-gallery {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+  
+  @media all and (min-width: 768px) {
+    .grid-gallery {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+  
+  @media all and (min-width: 1024px) {
+    .grid-gallery {
+      grid-template-columns: repeat(6, 1fr);
+    }
+  }
+  
+  .grid-gallery__item:nth-child(11n+1) {
+    grid-column: span 1;
+  }
+  
+  .grid-gallery__item:nth-child(11n+4) {
+    grid-column: span 2;
+    grid-row: span 1;
+  }
+  
+  .grid-gallery__item:nth-child(11n+6) {
+    grid-column: span 3;
+    grid-row: span 1;
+  }
+  
+  .grid-gallery__item:nth-child(11n+7) {
+    grid-column: span 1;
+    grid-row: span 2;
+  }
+  
+  .grid-gallery__item:nth-child(11n+8) {
+    grid-column: span 2;
+    grid-row: span 2;
+  }
+  
+  .grid-gallery__item:nth-child(11n+9) {
+    grid-row: span 3;
+  }
+  
+  .grid-gallery__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+
+  .nav-link{
+    font-size: 1.5rem;
+    margin-left: 30px;
+  }
+
+
+  .NavBarSet{
+    ///navbar flotante
+    position: fixed !important;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(255, 255, 255, .7);
+    z-index: 100;
+    transition: all 0.5s ease;
+
+
+  }
+
+
+
+  ///media query para pantallas pequeñas with media and max-width
+  
+  
+  @media only screen and (max-width: 800px) {
+    .nav-link{
+        font-size: 1.2rem;
+        margin-left: 10px;
+        }
+        body{
+            display: flex;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            justify-content: center;
+            align-items: center;
+            align-content: center;
+
+        }
+
+        .team-section{
+            height: fit-content !important;
+            margin-top: 30px !important;
+        }
+
+        .team {
+            img{
+                width: 100%;
+            }
+        }
+
+        .input, .input-msg {
+            width: 80% !important;
+        }
+
+        .form{
+            width: 80% !important;
+            margin-left: 10% !important;
+        }
+
+        .container-team{
+            flex-direction: column !important;
+        }
+
+        .phase-title{
+            font-size: 1.5rem;
+            text-align: center;
+            width: 90% !important;
+            margin-left: 5% !important;
+        }
+
+        .container-phase{
+            flex-direction: column !important;
+            justify-content: center;
+            align-items: center;
+            align-content: center;
+            height: fit-content !important;
+            width: 95% !important;
+        }
+
+        .container-phase-status{
+            flex-direction: column !important;
+            flex-wrap: nowrap;
+            overflow: hidden;
+            height: fit-content !important;
+        }
+
+        .container-proyecto{
+            height: 40vh;
+            width: 100%;
+            overflow: hidden;
+        }
+
+        .container-info{
+            display: flex;
+            flex-direction: column-reverse !important;
+            overflow: hidden;
+
+            .info{
+                width: 100%;
+                height: fit-content;
+            }
+
+            .info-image{
+                height: 40vh;
+                width: 100%;
+                overflow: hidden;
+            }
+        }
+        .info-text{
+            width: 90% !important;
+        }
+  }
+        
