--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -8,6 +8,11 @@
 
 @import "variables";
 
+
+.phase-exe {
+    width: 100%;
+    border-radius: 50%;
+}
 /* Header-Nav */
 .header {
     background-image: url("../images/cover.png");
