--- a/sass/styles.css
+++ b/sass/styles.css
@@ -7,6 +7,11 @@
   text-decoration: none;
 }
 
+.phase-exe {
+  width: 100%;
+  border-radius: 50%;
+}
+
 /* Header-Nav */
 .header {
   background-image: url("../images/cover.png");
