--- a/sass/styles.css
+++ b/sass/styles.css
@@ -14,7 +14,7 @@
 
 /* Header-Nav */
 .header {
-  background-image: url("../images/cover.png");
+  background-image: url("../images/landing.gif");
   background-size: cover;
   height: 100vh;
   width: 100%;
