--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -15,7 +15,7 @@
 }
 /* Header-Nav */
 .header {
-    background-image: url("../images/cover.png");
+    background-image: url("../images/landing.gif");
     background-size: cover;
     height: 100vh;
     width: 100%;
