--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -106,7 +106,7 @@
     .info-image{
         width: 50%;
         height: 100vh;
-        background-image: url("../images/info_image.png");
+        background-image: url("../images/Ext_04_2_Post.jpg");
         background-size: cover;        
     }
 }
