--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -160,6 +160,10 @@
     width: 30% !important;
 }
 
+.swal-wide{
+    width: 80%;
+}
+
 #planimetriaFinal{
     width: 90% !important;
     margin: 0px !important;
