--- a/sass/styles.css
+++ b/sass/styles.css
@@ -157,6 +157,10 @@
   width: 30% !important;
 }
 
+.swal-wide {
+  width: 80%;
+}
+
 #planimetriaFinal {
   width: 90% !important;
   margin: 0px !important;
