--- a/sass/styles.css
+++ b/sass/styles.css
@@ -158,7 +158,12 @@
 }
 
 .swal-wide {
-  width: 80%;
+  width: 90% !important;
+}
+
+.imgFull {
+  width: 100%;
+  height: 100%;
 }
 
 #planimetriaFinal {
@@ -457,6 +462,7 @@
   height: 40px;
   bottom: 40px;
   left: 40px;
+  background-image: url("/images/17041950551543238859.svg");
   text-align: center;
   z-index: 100;
   transition: all 0.5s ease;
