--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -161,7 +161,12 @@
 }
 
 .swal-wide{
-    width: 80%;
+    width: 90% !important;
+}
+
+.imgFull{
+    width: 100%;
+    height: 100%;
 }
 
 #planimetriaFinal{
@@ -462,7 +467,7 @@
 	height:40px;
 	bottom:40px;
 	left:40px;
-
+    background-image: url('/images/17041950551543238859.svg');
 	text-align:center;
 
   z-index:100;
