--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -189,6 +189,30 @@
     width: 100%;
     overflow: hidden;
 }
+
+.specialRow {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    width: 90% !important;
+    margin-left: 5% !important;
+    max-height: 20% !important;
+    overflow: hidden;
+}
+.specialImage{
+    width: 100% !important;
+    height: 50% !important;
+    object-fit: cover;
+    object-position: center;
+    margin: 0px !important;
+    padding: 0px !important;
+
+}
+.specialThumb{
+    max-height: 30% !important;
+    overflow: hidden;
+}
 .gallery {
 	display: flex;
 	transition: .3s;
@@ -196,6 +220,7 @@
     overflow: hidden;
     align-items: stretch;
     justify-content: center;
+    height: max-content !important;
 
     
 
